Updated CSS and view pages

--- a/recipe_app/app/views/recipes/_form.html.erb
+++ b/recipe_app/app/views/recipes/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label "Name *" %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :source %><br />
+    <%= f.label "Source *" %><br />
     <%= f.text_field :source %>
   </div>
   <div class="field">
@@ -24,7 +24,7 @@
     <%= f.text_field :url %>
   </div>
   <div class="field">
-    <%= f.label :instructions %><br />
+    <%= f.label "Instructions *" %><br />
     <%= f.text_area :instructions %>
   </div>
   <div class="actions">
