--- a/recipe_app/app/views/recipes/show.html.erb
+++ b/recipe_app/app/views/recipes/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>Recipe</b>
   <%= @recipe.name %>
 </p>
 
 <p>
-  <b>Source:</b>
-  <%= @recipe.source %>
+  <b>Source</b>
+  <%= link_to @recipe.source, @recipe.url %>
 </p>
 
 <p>
