--- a/recipe_app/app/views/layouts/application.html.erb
+++ b/recipe_app/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>RecipeApp</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title>RecipeApp</title>
+    <%= render 'layouts/stylesheets' %> 
+    <%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
+  </head>
+  <body>
+    <section class="round">
+      <%= yield %>
+    </section>
+  </body>
 </html>
