--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -23,24 +23,10 @@
     <%= f.label :url %><br />
     <%= f.text_field :url %>
   </div> 
-
-  <!= I'm not really sure where the following line should go, or if I need it. %>
-  <input type="hidden" name="ingredients[]" value="json_encoded_fields" />
-
-  <!= Should I NOT be using :ingredients here? Just random fields which will be stored as data later? => 
-  <%= f.fields_for :ingredients do |fields| %>
-    <div class="field">
-      <%= fields.label :amount %><br />
-      <%= fields.text_field :amount %>
-      <%= fields.label :name %><br />
-      <%= fields.text_field :name %>
-    </div>
-    <div class="actions">
-      <%= link_to "[+]", @recipe.add_ingredient %>
-      <!= Here: I want to add a new line of the form for a new ingredient and store this one in the ingredients array - json encoded? =>
-    </div>
-  <% end %>
-  
+<br /><br />
+<h3>Ingredient(s):</h3>
+  <%= render 'ingredients/collection_partial', :form => f, :recipe => @recipe%>
+<br /><br />
   <div class="field">
     <%= f.label "Instructions *" %><br />
     <%= f.text_area :instructions %>
