--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :amount %><br />
+    <%= f.label "Amount *" %><br />
     <%= f.text_field :amount %>
   </div>
   <div class="field">
@@ -20,7 +20,7 @@
     <%= f.text_field :unit %>
   </div>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label "Ingredient name *" %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
@@ -28,7 +28,7 @@
     <%= f.text_field :preparation %>
   </div>
   <div class="field">
-    <%= f.label :recipe_id %><br />
+    <%= f.label :recipe_id %>
     <%= f.text_field :recipe_id %>
   </div>
   <div class="actions">
