--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @recipe.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
-
       <ul>
       <% @recipe.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -23,10 +22,23 @@
     <%= f.label :url %><br />
     <%= f.text_field :url %>
   </div> 
+
+    <%= render(:partial => 'ingredients/experimental_form',
+                          :locals => {:f => f})  unless @recipe.ingredients.nil? %>
+
+
   <div class="field">
     <%= f.label "Instructions *" %><br />
     <%= f.text_area :instructions %>
   </div>
+
+    <%= Tag.all.each do |tag| %>
+        <div class="field">
+          <%= check_box_tag 'recipe[tag_ids][]', tag.id, @recipe.tagged?(tag) %>
+          <%= label_tag :tag_id, tag.value %>
+        </div>
+    <% end %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
