cleanup for ingredients

--- a/app/views/ingredients/_experimental_form.html.erb
+++ b/app/views/ingredients/_experimental_form.html.erb
@@ -1,11 +1,7 @@
-<table>
-  <tr>
-    <td>Amount *</td>
-    <td>Name *</td></tr>
-<% f.fields_for :ingredients do |ingredient| %>
-   <tr>
-    <td><%= ingredient.text_field :amount %></td>
-    <td><%= ingredient.text_field :name %></td></tr>
-<% end %>
-    </table>
+
+    <td><%= f.text_field :amount %></td>
+    <td><%= f.text_field :unit %></td>
+    <td><%= f.text_field :name %></td>
+    <td><%= f.text_field :preparation %></td></tr>
+
 
