--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -23,20 +23,30 @@
     <%= f.text_field :url %>
   </div> 
 
-    <%= render(:partial => 'ingredients/experimental_form',
-                          :locals => {:f => f})  unless @recipe.ingredients.nil? %>
+    <%= f.label 'Ingredients:' %>
+    <table>
+      <tr>
+        <td>Amount *</td>
+        <td>Unit</td>
+        <td>Name *</td>
+        <td>Prep</td></tr>
+      <tr>
+      <%= f.fields_for :ingredients, :url => {:action => 'new'} do |ingredient_form| %>
+       <tr>
+         <%= render 'ingredients/experimental_form', :f => ingredient_form %>
+       </tr>
+      <% end %>
 
+    </table>
 
   <div class="field">
     <%= f.label "Instructions *" %><br />
     <%= f.text_area :instructions %>
   </div>
 
-    <%= Tag.all.each do |tag| %>
-        <div class="field">
-          <%= check_box_tag 'recipe[tag_ids][]', tag.id, @recipe.tagged?(tag) %>
-          <%= label_tag :tag_id, tag.value %>
-        </div>
+    <%= f.fields_for :relationships, :url => {:action => 'new'} do |tags_form| %>
+        some things should happen!
+      <%= render 'tags/tag_options', {:f => tags_form, :recipe => @recipe} %>
     <% end %>
 
   <div class="actions">
