--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -44,7 +44,7 @@
     <%= f.text_area :instructions %>
   </div>
 
-    <%= f.fields_for :relationships, :url => {:action => 'new'} do |tags_form| %>
+    <%= f.fields_for :tags, :url => {:action => 'new'} do |tags_form| %>
         some things should happen!
         <%= render 'tags/tag_options', {:f => tags_form, :recipe => @recipe} %>
     <% end %>
