--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -27,8 +27,8 @@
 
 <p>
   <b>Tags:</b>
-  <%= @recipe.tags.each do |tag_id| %>
-    <%= tag_id %>
+  <%= @recipe.tags.each do |tag| %>
+    <%= tag.value %>
   <% end %>
 </p>
 
