small updates to to recipe views for tags

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -44,7 +44,7 @@
     <%= f.text_area :instructions %>
   </div>
 
-    <%= @tags.each do |tag| %>
+    <% @tags.each do |tag| %>
         <div class="field">
           <%= check_box_tag "recipe[tag_ids][]", tag.id, @recipe.tags.include?(tag) %>
           <%= tag.value %>
