--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,7 +10,7 @@
 <% @recipes.each do |recipe| %>
   <tr>
     <td><%= link_to recipe.name, recipe %></td>
-    <td><%= link_to recipe.source, recipe.url %></td>
+    <td><%= recipe.url == '' ? recipe.source : link_to(recipe.source, recipe.url) %></td>
     <td></td>
     <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
     <td><%= link_to 'Delete', recipe, :confirm => 'Are you sure?', :method => :delete %></td>
