--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -20,4 +20,4 @@
 
 <br />
 
-<%= link_to 'New Recipe', new_recipe_path %>
+<%= link_to 'New Recipe', new_recipe_path, :class => 'new_recipe round' %>
