Replaced amount + unit with quantity and removed extra edit links in show views.

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -12,17 +12,13 @@
   <% end %>
   <table>
     <tr>
-      <td>Amount *</td>
-      <td>Unit</td>
+      <td>Quantity</td>
       <td>Ingredient *</td>
       <td>Preparation</td>
     </tr>
     <tr>
       <td class="field">
-        <%= f.text_field :amount %>
-      </td>
-      <td class="field">
-        <%= f.text_field :unit %>
+        <%= f.text_field :quantity %>
       </td>
       <td class="field">
         <%= f.text_field :name %>
