--- a/app/views/ingredients/_show_all.html.erb
+++ b/app/views/ingredients/_show_all.html.erb
@@ -1,9 +1,7 @@
 <% ingredients.each do |ing| %>
   <br />
-  <%= ing.amount %>
-  <%= ing.unit %>
+  <%= ing.quantity %>
   <%= ing.name %>  
   <%= ing.preparation %>
-  <%= link_to '[-]', ing, :confirm => 'Are you sure?', :method => :delete %>
 <% end %>
 
