--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Amount:</b>
-  <%= @ingredient.amount %>
-</p>
-
-<p>
-  <b>Unit:</b>
-  <%= @ingredient.unit %>
+  <b>Quantity:</b>
+  <%= @ingredient.quantity %>
 </p>
 
 <p>
