more local changes that need to be backed up so my computer doesn't destroy them. to be sorted through later

--- a/app/views/instructions/_show_all.html.erb
+++ b/app/views/instructions/_show_all.html.erb
@@ -1,5 +1,5 @@
-<% instructions.each do |instruction| %>
-  <br />
-  <%= instruction.content %>
-<% end %>
-
+<ol>
+  <% instructions.each do |instruction| %>
+    <li><%= instruction.content %></li>
+  <% end %>
+</ol>
