--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>RecipeApp</title>
-    <%= render 'layouts/stylesheets' %> 
+    <%= stylesheet_link_tag 'app' %> 
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
   </head>
