--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>RecipeApp</title>
     <%= stylesheet_link_tag 'app' %> 
-    <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag "application" %>
     <%= csrf_meta_tag %>
   </head>
   <body>
