--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,14 +1,15 @@
-
+@import url("http://fonts.googleapis.com/css?family=Merriweather+Sans:300");
 
 .container {
   background: #fff;
   padding: 5px;
   width: 100px;
   height: 100px;
-  margin-left: 75px;
+  margin-left: 6em;
 }
 
 body {
+  font-family: 'Merriweather Sans', sans-serif;
   background: #cc1166;
 }
 
@@ -19,12 +20,12 @@ header {
 header img {
   padding: 1em;
   background: #fff;
-  width: 75px;
+  width: 65px;
 }
 
 section {
-  margin: 5em;
-  font-size: 120%;
+  margin: 6em;
+  font-size: 100%;
   padding: 20px 50px 50px;
   background: #fff;
   margin-top: 10px;
@@ -32,6 +33,20 @@ section {
 
 section h1 {
   font-size: 200%;
+}
+
+table {
+  width: 75%;
+  border: 1px solid gray;
+}
+
+table, th {
+  border-collapse:collapse;
+  border: 1px solid gray;
+}
+
+td {
+  border-top: 1px solid gray;
 }
 
 /* Links */
